--- a/config/locales/models/models_ja.yml
+++ b/config/locales/models/models_ja.yml
@@ -2,6 +2,7 @@ ja:
   activerecord:
     models:
       user: ユーザー
+      task: タスク
     attributes:
         user:
           id: ID
@@ -11,3 +12,6 @@ ja:
           password_confirmation: パスワード再入力
           created_at: 作成日
           updated_at: 更新日
+        task:
+          name: 名称
+          description: 詳細
